# cx-sat-demo

./: .gitignore  .mcp.json  README.md  mcp_core.py  mcp_server.py  pyproject.toml  running-config.example  site.yaml  topology.clab.yml  topology.clab.yml.annotations.json  vsx_checks.py
.devcontainer/: devcontainer.json
aoscx-ssh-mcp/: core.py  mcp_server.py  ssh_tools.py
configs/: core-01-config.txt  core-02-config.txt  host-01.sh  host-02.sh
libraries/: CXLibraryVSX.py  _aoscx.py
mcp/: config_checks.py  lacp_checks.py  mcp_core.py  vsx_checks.py
show-mcp/: cli_tools.py  core.py  mcp_server.py
tests/: vsx.robot
