[project]
name = "cx-sat-demo"
version = "0.1.0"
description = "HPE Aruba Networking AOS-CX Switch System Acceptance Testing Demo"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Chris Denham" },
]
dependencies = [
    "mcp",
    "python-dotenv",
    "pyyaml",
    "robotframework",
]

[project.urls]
Homepage = "https://github.com/crispyfi/cx-sat-demo"
Repository = "https://github.com/crispyfi/cx-sat-demo"
Issues = "https://github.com/crispyfi/cx-sat-demo/issues"

[tool.uv]
package = false